--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <ul>
     <li><a routerLink="/first">Primera Ruta</a></li>
     <li><a routerLink="/second">Segunda Ruta</a></li>
+    <li><a routerLink="/third">Tercera Ruta</a></li>
   </ul>
 </nav>
