comunication between components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<router-outlet></router-outlet>
-
 <nav>
   <ul>
     <li><a routerLink="/first">Primera Ruta</a></li>
     <li><a routerLink="/second">Segunda Ruta</a></li>
     <li><a routerLink="/third">Tercera Ruta</a></li>
+    <li><a routerLink="/basic-form">Formulario Basico</a></li>
+    <li><a routerLink="/basic-comunication">Comunicacion Basica</a></li>    
   </ul>
 </nav>
+
+<router-outlet></router-outlet>
