--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <li><a routerLink="/third">Tercera Ruta</a></li>
     <li><a routerLink="/basic-form">Formulario Basico</a></li>
     <li><a routerLink="/basic-comunication">Comunicacion Basica</a></li>    
+    <li><a routerLink="/person-form">Formulario de personas</a></li>       
   </ul>
 </nav>
 
