--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
     <li><a routerLink="/third">Tercera Ruta</a></li>
     <li><a routerLink="/basic-form">Formulario Basico</a></li>
     <li><a routerLink="/basic-comunication">Comunicacion Basica</a></li>    
-    <li><a routerLink="/person-form">Formulario de personas</a></li>       
+    <li><a routerLink="/person-form">Formulario de personas</a></li>    
+    <li><a routerLink="/photos">Album de fotos</a></li>  
   </ul>
 </nav>
 
