--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <li><a routerLink="/basic-comunication">Comunicacion Basica</a></li>    
     <li><a routerLink="/person-form">Formulario de personas</a></li>    
     <li><a routerLink="/photos">Album de fotos</a></li>  
+    <li><a routerLink="/task">Mantenimiento de Tareas</a></li>   
   </ul>
 </nav>
 
