--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
     <li><a routerLink="/photos">Album de fotos</a></li>  
     <li><a routerLink="/task">Mantenimiento de Tareas</a></li> 
     <li><a routerLink="/time">Reloj</a></li> 
+    <li><a routerLink="/basic-reactive-form">Formulario Reactivo</a></li> 
+    
   </ul>
 </nav>
 
