--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <li><a routerLink="/task">Mantenimiento de Tareas</a></li> 
     <li><a routerLink="/time">Reloj</a></li> 
     <li><a routerLink="/basic-reactive-form">Formulario Reactivo</a></li> 
-    
+    <li><a routerLink="/stepper">Pasos</a></li>    
   </ul>
 </nav>
 
