--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -1,6 +1,10 @@
-<label>Nombre</label>
-<input type="text" [(ngModel)]="name">
-<button (click)="clear()" >Borrar</button>
+<mat-form-field class="example-form-field" appearance="fill">
+    <mat-label>Nombre</mat-label>
+    <input matInput type="text" [(ngModel)]="name">
+    <button *ngIf="name" matSuffix mat-icon-button aria-label="Clear" (click)="clear()">
+      <mat-icon>close</mat-icon>
+    </button>
+</mat-form-field>
 <p *ngIf="thereIsName">
     hola <span [ngClass]="nameIsLong ? 'name-is-long' : ''">{{name}}!</span>
 </p>
