--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@
     <li><a routerLink="/time">Reloj</a></li> 
     <li><a routerLink="/basic-reactive-form">Formulario Reactivo</a></li> 
     <li><a routerLink="/stepper">Pasos</a></li>    
-    <li><a routerLink="/material-task">Tareas con Material</a></li>    
+    <li><a routerLink="/material-task">Tareas con Material</a></li>  
+    <li><a routerLink="/grandFather">Comunicacion Entre Componentes Avanzado</a></li>     
   </ul>
 </nav>
 
